--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
       <h1>
         Yarının fırsatlarını bugünden keşfedin! 🌟 Borsa veri tahminiyle
         yatırımınıza yön verin, kazancınıza kazanç katın! Şimdi Kayıt Olun veya
-        Giriş Yaparak Kazanmaa Başlayın!
+        Giriş Yaparak Kazanmaya Başlayın!
       </h1>
 
       <a href="/register" class="button">Kayıt Ol</a>
